--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 <main>
 
     <div class="course-header">
-        <h3>Angular PWA Demo</h3>
+        <h2>Angular PWA Demo  - V1</h2>
         <img class="course-logo pwa-logo" src="/assets/angular-pwa-demo.png">
     </div>
 
